feat(roster): implement roster, add entry point in contact book and include roster in export
Squashed commit of the following:

commit 95fa85108d1fcbcf477349f902f54a8729c5d735
Author: PGCaptain <kylewei@gmail.com>
Date:   Sun Nov 23 01:54:41 2025 +0800

    include roster in the workbook export

commit 1b370c97a3e51b09a283f5c31e8dcbd595a831f4
Author: PGCaptain <kylewei@gmail.com>
Date:   Sun Nov 23 00:37:01 2025 +0800

    add entry to roster on the contact book page

commit ce067beedc5d4b1fb93be005e672630333dd1be7
Author: PGCaptain <kylewei@gmail.com>
Date:   Sun Nov 23 00:19:52 2025 +0800

    complete roster in the desktop view

commit 838430b6a1b2cd0102c442be6d1ebc01b3f158ed
Author: PGCaptain <kylewei@gmail.com>
Date:   Sat Nov 22 22:33:14 2025 +0800

    troubleshoot roster form

commit 3caef28cab4e9d9854485ceec03b6b16b8274554
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 21 17:20:56 2025 +0800

    updated contact ticket types

commit 5dca95b2a36424ba0b7f1c3979bb0bd60ff2633c
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 21 16:52:16 2025 +0800

    fix the default value of order number

commit 610fb54614e894d5783293ac80035daedf837d82
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 21 16:12:24 2025 +0800

    feat(roster): implement the new roster

commit 85098071b255eb513226bc9addbf04a19fa703f2
Author: PGCaptain <kylewei@gmail.com>
Date:   Fri Nov 21 13:33:17 2025 +0800

    fix speech_log display

--- a/app/static/css/forms.css
+++ b/app/static/css/forms.css
@@ -21,9 +21,14 @@
     background-color: #772432;
 }
 
+.btn-secondary {
+    background-color: #6c757d;
+    color: white;
+}
+
 .btn-danger {
-    color: #333;
-    background-color: #E5E7EB;
+    background-color: #dc3545;
+    color: white;
 }
 
 .btn-info {
