--- a/app/templates/roster.html
+++ b/app/templates/roster.html
@@ -111,8 +111,10 @@
                         <select class="form-control" id="ticket" required>
                             <option value="Early-bird" selected>Early Bird</option>
                             <option value="Walk-in">Walk-in</option>
+                            <option value="Role-taker">Role Taker</option>
                             <option value="Officer">Officer</option>
                             <option value="Coupon">Coupon</option>
+                            <option value="Unpaid">Unpaid</option>
                         </select>
 
                         <div class="form-buttons">
