--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -14,7 +14,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      href="{{ url_for('static', filename='vendor/css/fontawesome.min.css') }}"
     />
   </head>
   <body>
