fix(db): add credential and rename completed_path

--- a/app/templates/_contact_modal.html
+++ b/app/templates/_contact_modal.html
@@ -63,12 +63,12 @@
           </td>
         </tr>
         <tr>
-          <td><label for="completed_levels">Completed Levels:</label></td>
+          <td><label for="completed_paths">Completed Paths:</label></td>
           <td>
             <input
               type="text"
-              id="completed_levels"
-              name="completed_levels"
+              id="completed_paths"
+              name="completed_paths"
               placeholder="e.g., PM1, DL2..."
             />
           </td>
