--- a/app/templates/contact_form.html
+++ b/app/templates/contact_form.html
@@ -25,8 +25,8 @@
                 <td><input type="text" id="club" name="club" value="{{ contact.Club if contact else '' }}" placeholder="e.g., Club1/Club2"></td>
             </tr>
                 <tr>
-                    <td><label for="completed_levels">Completed Levels:</label></td>
-                    <td><input type="text" id="completed_levels" name="completed_levels" value="{{ contact.Completed_Levels if contact else '' }}" placeholder="e.g., PM1, DL2..."></td>
+                    <td><label for="completed_paths">Completed Paths:</label></td>
+                    <td><input type="text" id="completed_paths" name="completed_paths" value="{{ contact.Completed_Paths if contact else '' }}" placeholder="e.g., PM1, DL2..."></td>
                 </tr>
                 <tr>
                     <td><label for="dtm">DTM:</label></td>
