--- a/app/templates/contacts.html
+++ b/app/templates/contacts.html
@@ -40,9 +40,10 @@ content %}
       <th class="sortable" data-column-index="2">Club</th>
       <th class="sortable" data-column-index="3">Current Path</th>
       <th class="sortable" data-column-index="4">Credential</th>
-      <th class="sortable" data-column-index="5">Next Project</th>
+      <th class="sortable" data-column-index="5">Completed Paths</th>
+      <th class="sortable" data-column-index="6">Next Project</th>
       {% if is_authorized(session.get('user_role'), 'CONTACT_BOOK_EDIT') %}
-      <th class="action-header" data-column-index="6">Actions</th>
+      <th class="action-header" data-column-index="7">Actions</th>
       {% endif %}
     </tr>
   </thead>
@@ -58,6 +59,7 @@ content %}
       <td>{{ contact.Club }}</td>
       <td>{% if contact.user %}{{ contact.user.Current_Path }}{% endif %}</td>
       <td>{% if contact.user %}{{ contact.user.Credential }}{% endif %}</td>
+      <td>{{ contact.Completed_Paths }}</td>
       <td>{% if contact.user %}{{ contact.user.Next_Project }}{% endif %}</td>
       {% if is_authorized(session.get('user_role'), 'CONTACT_BOOK_EDIT') %}
       <td>
