--- a/app/templates/agenda.html
+++ b/app/templates/agenda.html
@@ -274,6 +274,14 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="footnote">
+            <a href="https://www.toastmasters.org/education/education-programs-faq#faqTop">Pathways award credentials</a> are written as follows:
+        <ul>
+            <li>Only the most recently achieved award will show</li>
+            <li>Any Pathways award credential overwrites a traditional education program award credential (both Communication and Leadership)</li>
+            <li>DTM overwrites all education award credentials, whether traditional program or Pathways</li>
+        </ul>
+        </div>
     </div>
     
     <div id="createAgendaModal" class="modal">
